Indica en un texto por pantalla el timpo que estuvo activa la app siempre que le des al boton

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MyFirstAndroidApp</string>
+    <string name="todo">TODO</string>
+    <string name="button">Button</string>
+    <string name="my_button_text" />
+    <string name="contained_button">Contained button</string>
 </resources>
